--- a/chatbot/data/stories/verify.yml
+++ b/chatbot/data/stories/verify.yml
@@ -74,6 +74,10 @@ stories:
     - action: action_get_similar_cases
     - intent: submit_proposal
     - action: action_submit_proposal
+  - story: chatbto ask view similar after evaluation
+    steps:
+    - action: action_verify_proposal
+    - action: utter_ask_similar
   - story: chatbot ask view similar cases (affirm)
     steps:
     - action: utter_ask_similar
@@ -99,29 +103,18 @@ stories:
     steps:
      - action: utter_ask_end_convo
      - intent: affirm
-     - action: utter_ask_after_cancel
+     - action: utter_more_help
      - intent: view_similar
      - action: action_get_similar_cases
   - story: ask end convo affirm submit
     steps:
     - action: utter_ask_end_convo
     - intent: affirm
-    - action: utter_ask_after_cancel
+    - action: utter_more_help
     - intent: submit_proposal
     - action: action_submit_proposal
   - story: verify basic explain
     steps:
-    - intent: greet
-    - action: utter_greet
-    - intent: verify_proposal
-    - action: utter_verify
-    - action: verify_form
-    - active_loop: verify_form
-    - active_loop: null
-    - action: action_review_verify_form
-    - intent: affirm
-    - action: utter_verifying
-    - action: action_verify_proposal
     - intent: ask_reason
     - action: action_explain_outcome
     - action: utter_ask_feedback
@@ -141,13 +134,52 @@ stories:
     - action: action_review_verify_form
     - intent: deny
     - action: utter_review_deny
-    - intent: enter_data
+    - intent: enter_field_to_edit
     - action: action_reset_slots
     - action: verify_form
     - active_loop: verify_form
     - active_loop: null
     - action: action_review_verify_form
-
+    - intent: affirm
+    - action: utter_verifying
+    - action: action_verify_proposal
+    - action: utter_ask_similar
+    - intent: affirm
+    - action: utter_affirm_similar
+    - action: action_get_similar_cases
+  - story: cancel form
+    steps:
+    - action: verify_form
+    - active_loop: verify_form
+    - intent: cancel
+    - action: utter_ask_confirm_stop
+    - intent: affirm
+    - action: action_deactivate_loop
+    - active_loop: null
+    - action: utter_more_help
+  - story: cancel during review
+    steps:
+    - action: action_review_verify_form
+    - intent: cancel
+    - action: utter_ask_confirm_stop
+    - intent: affirm
+    - action: utter_more_help
+  - story: cancel form then deny cancel
+    steps:
+    - action: verify_form
+    - active_loop: verify_form
+    - intent: cancel
+    - action: utter_ask_confirm_stop
+    - intent: deny
+    - action: verify_form
+    - active_loop: verify_form
+  - story: cancel review then deny cancel
+    steps:
+    - action: action_review_verify_form
+    - intent: cancel
+    - action: utter_ask_confirm_stop
+    - intent: deny
+    - action: action_review_verify_form
 
 #  - story: verify_restart
 #    steps:
