--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -61,7 +61,7 @@ services:
     networks:
       - supa-network
     volumes:
-      - ingestion-volume:/var/lib/mysql
+      - ingestion-volume:/data
   neo4j-test:
     image: neo4j:4.0.8
     environment:
