--- a/docker-compose.ingest.yml
+++ b/docker-compose.ingest.yml
@@ -62,7 +62,7 @@ services:
     networks:
       - supa-network
     volumes:
-      - ingestion-volume:/data
+      - ingestion-volume:/var/lib/mysql
   neo4j-test:
     image: neo4j:4.0.8
     environment:
