add intent: enter_ordinal

--- a/chatbot/data/nlu/general.yml
+++ b/chatbot/data/nlu/general.yml
@@ -609,3 +609,22 @@ nlu:
     - thank you for your help
     - thanks for ur help
     - thank u
+
+- intent: enter_ordinal
+  examples : |
+    - first
+    - 1st
+    - First
+    - 1st one
+    - First one
+    - second one
+    - Second
+    - 2nd
+    - the first one
+    - The second one
+    - third
+    - 3rd
+    - Third one
+    - The third one
+    - number one
+    - number two
