--- a/chatbot/domain.yml
+++ b/chatbot/domain.yml
@@ -21,6 +21,7 @@ intents:
 - thanks
 - enter_field_to_edit
 - enter_form_data
+- enter_ordinal
 
 entities:
 - use_class
@@ -181,6 +182,7 @@ actions:
   - action_show_all_use_classes
   - validate_verify_form
   - action_get_addresses
+  - action_set_address_slots
   - action_review_verify_form
   - action_verify_proposal
   - action_get_similar_cases
