--- a/chatbot/domain.yml
+++ b/chatbot/domain.yml
@@ -22,7 +22,13 @@ intents:
 - enter_field_to_edit
 - enter_form_data
 - enter_ordinal
-
+- list_all_use_class
+- ask_definition
+- ask_requirements
+- ask_examples
+- ask_difference
+- enter_use_class
+- clarify
 entities:
 - use_class
 - postal_code
@@ -38,7 +44,11 @@ entities:
 - lot_number_example
 - gross_floor_area_example
 - use_description_example
-
+- restaurant
+- shop
+- barpub
+- amusement_centre
+- massage_establishment
 slots:
   use_class:
     type: text
@@ -73,6 +83,8 @@ slots:
   music_details:
     type: text
   noise_mitigation:
+    type: text
+  current_use_class:
     type: text
 
 
@@ -109,8 +121,6 @@ responses:
   - text: "Which field do you want to edit?"
   utter_verify:
   - text: "Sure, let me help you with that! I will first need some information from you."
-  utter_clarify:
-  - text: "Sure, what would you like to clarify?"
   utter_ask_use_class:
   - text: "What will be the proposed use class?"
   utter_ask_use_description:
@@ -179,6 +189,18 @@ responses:
   - text: "Hope I'd been a great help, is there anything else I can help you with?"
   utter_ask_confirm_stop:
   - text: "Are you sure you want to stop here?"
+  utter_clarify:
+  - text: "Sure, currently I can only help to clarify your doubts regarding the definitions of some use classes, their requirements and some examples. What would you like to know?"
+  utter_use_classes:
+  - text: "Here is the full list of use classes. \n {use_classes}"
+  utter_definition:
+  - text: "Here is the definition for {uc}. \n {definition}"
+  utter_examples:
+  - text: "Here are some examples for {uc}. \n {examples}"
+  utter_requirements:
+  - text: "Here are the requirements for {uc}. \n {requirements}"
+  utter_differences:
+  - text: "Here are the differences between {use_class_one} and {use_class_two}. \n {differences}"
 
 actions:
   - action_show_all_use_classes
@@ -193,6 +215,11 @@ actions:
   - action_submit_proposal
   - action_reset_slots
   - action_set_live_music
+  - action_get_all_use_classes
+  - action_get_definition
+  - action_get_requirements
+  - action_get_examples
+  - action_get_difference
 
 forms:
   verify_form:
@@ -201,6 +228,16 @@ forms:
         intent: enter_form_data
       - type: from_entity
         entity: use_class_example
+      - type: from_entity
+        entity: restaurant
+      - type: from_entity
+        entity: shop
+      - type: from_entity
+        entity: massage_establishment
+      - type: from_entity
+        entity: barpub
+      - type: from_entity
+        entity: amusement_centre
     use_description:
       - type: from_text
         intent: enter_form_data
