init problematic traffic areas

--- a/docker-compose.ingest.yml
+++ b/docker-compose.ingest.yml
@@ -41,6 +41,7 @@ services:
       LAND_USE_JSON_FILE: "Land_Use.json"
       SHOPHOUSE_GUIDELINES_JSON_FILE: "Shophouse_Guidelines.json"
       PROBLEMATIC_AREA_JSON_FILE: "Problematic_Area.json"
+      PROBLEMATIC_TRAFFIC_AREA_JSON_FILE: "Problematic_Traffic_Area.json"
       CASES_DATA_DIRECTORY: "./sample/"
     networks:
       - supa-network
