--- a/docker-compose.ingest.yml
+++ b/docker-compose.ingest.yml
@@ -42,6 +42,7 @@ services:
       SHOPHOUSE_GUIDELINES_JSON_FILE: "Shophouse_Guidelines.json"
       PROBLEMATIC_AREA_JSON_FILE: "Problematic_Area.json"
       PROBLEMATIC_TRAFFIC_AREA_JSON_FILE: "Problematic_Traffic_Area.json"
+      ACTIVITY_GENERATING_USE_JSON_FILE: "Activity_Generating_Use.json"
       CASES_DATA_DIRECTORY: "./sample/"
     networks:
       - supa-network
