--- a/chatbot/data/stories/general.yml
+++ b/chatbot/data/stories/general.yml
@@ -42,3 +42,10 @@ stories:
       - action: utter_more_help
       - intent: deny
       - action: utter_goodbye
+  - story: cancel + affirm
+    steps:
+      - intent: cancel
+      - action: utter_ask_confirm_stop
+      - intent: affirm
+      - action: action_reset_all_slots
+      - action: utter_more_help
